force-app/main/default/objects/Contract/fields/Default_Edition__c.field-meta.xml
<CustomField>
    <fullName>Default_Edition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of Edition object.</description>
    <label>Default Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>