force-app/main/default/objects/Contract/fields/Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote__c</fullName>
    <description>Is Selected Quote is Primary Or Not.</description>
    <formula>SBQQ__Quote__r.SBQQ__Primary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Quote</label>
    <type>Checkbox</type>
</CustomField>