force-app/main/default/objects/Contract/fields/Tax_Rule__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rule__c</fullName>
    <description>This field is used to update values while upload declaration document.</description>
    <label>Tax Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UAE VAT Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>